--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,8 @@
 .call-to-action {
   background-color: #FF6600;
 }
+footer {
+  background-color: #9492A2;
+  padding: 1rem;
+  border-top: #ff6600 3px solid;
+}
