--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,5 +4,18 @@
 footer {
   background-color: #9492A2;
   padding: 1rem;
+  margin-top: 1rem;
   border-top: #ff6600 3px solid;
+}
+.filler {
+  margin: 1rem;
+  border-bottom: #ff6600 3px solid;
+}
+.failure {
+  background-color: rgba(232, 37, 24, 0.4);
+  padding: 0.5rem;
+}
+.success {
+  background-color: rgba(114, 232, 94, 0.4);
+  padding: 0.5rem;
 }
